# fitbit

./: .env.example  .gitignore  README.md  app.py  create_project_structure.bat  project_export.bat  project_export.txt  pyproject.toml  requirements.txt  setup.py  tmp.py
sql/: schema.sql
src/: main.py
src/agents/: health_assistant.py  workflows.py
src/api/: claude_client.py  llm_factory.py  llm_interface.py  weather_client.py
src/core/: context_assembly.py  conversation_orchestrator.py  response_generator.py
src/llm_clients/: claude_client.py  llm_interface.py
src/memory/: database.py  external_data.py  highlight_schema.py  highlights.py  insights.py  knowledge.py  raw_data.py
src/prompts/: base_character.txt  conversation_guidelines.txt  external_context.txt  health_data.txt  highlight_extraction.txt  insights.txt  knowledge.txt  user_context.txt
src/utils/: load_prompts.py  logging.py  mock_data.py
tests/: test_conversation.py  test_insights.py  test_memory.py
